syntax="proto3";

package ProtobufProto.Model;

//import "google/protobuf/Any.proto";


 //请求类型
enum TcpFlags{
     TCP_REGESTER=0;
     TCP_LOGIN=1;
     TCP_LOGOUT=2;
     TCP_GET_PLAYER_TRANSFORMS = 3;
     TCP_CREATE_ROOM =4;
     TCP_JOIN_ROOM = 5;
     TCP_LEAVE_ROOM = 6;
     TCP_GET_ROOM_LIST =7;
     TCP_GET_ROOM_USERS = 8;
     TCP_ROOM_READY = 9;
     TCP_ROOM_CANCEL_READY =10;
     TCP_ROOM_CHANGE_INDEX =11;
     TCP_DO_START_FIGHT =12;
     TCP_CHECK_TIME =13;
     TCP_GET_USER_INFO =14;
     TCP_CHECK_VERSION = 15;
     TCP_ROOM_CHANGE=16;        
     TCP_BROADCAST_METHOD =17;
     TCP_BROADCAST_FIELD =18;
     TCP_UPDATE_TRANSFORM =19;

     //UDP_Update_Turret_Direction = 16;
     //Fire = 17;
     //TakeDamage =18;
     //Die = 19;
     //RemainingTime =20;
     UDP_GAME_FINISHED = 100;
}

enum UdpFlags{
    UDP_UP_FRAME=0;
    UDP_DOWN_FRAME=1;
    UDP_GAME_READY=2;
}






